# mu-recursive-functions

./: CMakeLists.txt  README.md
headers/core/mu_function/: mu_function.h  mu_function_definition.h
headers/core/mu_function_managment/: mu_context_inflater.h  mu_function_manager.h
headers/core/mu_parser/: mu_parser.h
headers/core/mu_result/: mu_result.h
headers/core/mu_variable/: mu_variable.h
headers/lib4aio/collections/lists/: double_list.h  string_list.h
headers/lib4aio/utils/boolean_utils/: boolean_utils.h
headers/lib4aio/utils/char_utils/: char_utils.h
headers/lib4aio/utils/double_utils/: double_utils.h
headers/lib4aio/utils/error_utils/: error_utils.h
headers/lib4aio/utils/file_utils/: file_reader.h
headers/lib4aio/utils/log_utils/: log_utils.h
headers/lib4aio/utils/memory_utils/: memory_utils.h
headers/lib4aio/utils/point_watcher/: point_watcher.h
headers/lib4aio/utils/str_hook/: str_hook.h
headers/lib4aio/utils/str_hook/str_hook_utils/: str_hook_utils.h
headers/lib4aio/utils/string_utils/: string_builder.h  string_utils.h
headers/lib4aio/utils/type_utils/: type.utils.h
main/: main.c
sources/core/mu_function/: mu_function.c  mu_function_definition.c
sources/core/mu_function_managment/: mu_context_inflater.c  mu_function_manager.c
sources/core/mu_native/: cos.c  log.c  sin.c  sqrt.c
sources/core/mu_parser/: mu_parser.c
sources/core/mu_result/: mu_result.c
sources/core/mu_variable/: mu_variable.c
sources/lib4aio/collections/lists/: double_list.c  string_list.c
sources/lib4aio/utils/char_utils/: char_utils.c
sources/lib4aio/utils/double_utils/: string_to_double.c
sources/lib4aio/utils/error_utils/: error_utils.c
sources/lib4aio/utils/file_utils/: file_reader.c
sources/lib4aio/utils/log_utils/: log_utils.c
sources/lib4aio/utils/memory_utils/: memory_utils.c
sources/lib4aio/utils/point_watcher/: point_watcher.c
sources/lib4aio/utils/str_hook/: str_hook.c
sources/lib4aio/utils/str_hook/str_hook_utils/: str_hook_split.c  str_hook_trim.c  str_hook_utils.c
sources/lib4aio/utils/string_utils/: prefix_suffix.c  split.c  string_builder.c  string_utils.c  trim.c
tests/parser/: flex.mu
tests/performance/: functions.mu  passed.mu
